--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,7 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
+    ext.kotlin_version = "1.4.31"
+
     repositories {
         google()
         mavenCentral()
@@ -7,9 +9,59 @@ buildscript {
     dependencies {
         classpath "com.android.tools.build:gradle:7.0.4"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.6.10"
-
+        classpath 'com.google.dagger:hilt-android-gradle-plugin:2.38.1'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
+    }
+}
+
+allprojects {
+    ext {
+
+        androidLibs = [
+                appcompat           : 'androidx.appcompat:appcompat:1.2.0',
+                recyclerview        : 'androidx.recyclerview:recyclerview:1.1.0',
+                constraintlayout    : 'androidx.constraintlayout:constraintlayout:2.0.4',
+                androidxCore        : 'androidx.core:core-ktx:1.3.2',
+                lifecycleViewModel  : 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0',
+                material            : 'com.google.android.material:material:1.2.1',
+                roomRuntime         : 'androidx.room:room-runtime:2.2.5',
+                glide               : 'com.github.bumptech.glide:glide:4.11.0',
+                swipeRefreshLayout  : 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
+        ]
+
+        androidKaptLibs = [
+                roomCompiler  : 'androidx.room:room-compiler:2.2.5',
+                glideCompiler : 'com.github.bumptech.glide:compiler:4.11.0',
+                hiltCompiler  : 'com.google.dagger:hilt-android-compiler:2.38.1'
+        ]
+
+        kotlinLibs = [
+                stdlib    : "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version",
+                coroutines: 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.0'
+        ]
+
+        libs = [
+                okhttpLoginInterceptor   : 'com.squareup.okhttp3:logging-interceptor:4.9.0',
+                retrofit                 : 'com.squareup.retrofit2:retrofit:2.9.0',
+                retrofitGsonConverter    : 'com.squareup.retrofit2:converter-gson:2.9.0',
+                hilt                     : 'com.google.dagger:hilt-android:2.38.1'
+        ]
+
+        testLibs = [
+                junit        : 'junit:junit:4.13.1',
+                mockitoKotlin: "com.nhaarman.mockitokotlin2:mockito-kotlin:2.2.0",
+                mockitoInline: "org.mockito:mockito-inline:2.28.2"
+        ]
+
+        androidxTestLibs = [
+                archCoreTesting: 'androidx.arch.core:core-testing:2.1.0'
+        ]
+
+        androidTestLibs = [
+                testRunner: 'androidx.test:runner:1.3.0',
+                espresso  : 'androidx.test.espresso:espresso-core:3.3.0'
+        ]
     }
 }
 
