Se crean modulos para arquitectura clean

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,9 @@ android {
 }
 
 dependencies {
+    implementation project(":data")
+    implementation project(":domain")
+    implementation project(":usecases")
 
     implementation androidLibs.values()
     implementation kotlinLibs.values()
