--- a/settings.gradle
+++ b/settings.gradle
@@ -8,3 +8,6 @@ dependencyResolutionManagement {
 }
 rootProject.name = "MovieDB"
 include ':app'
+include ':data'
+include ':domain'
+include ':usecases'
