--- a/build.gradle
+++ b/build.gradle
@@ -45,7 +45,8 @@ allprojects {
                 okhttpLoginInterceptor   : 'com.squareup.okhttp3:logging-interceptor:4.9.0',
                 retrofit                 : 'com.squareup.retrofit2:retrofit:2.9.0',
                 retrofitGsonConverter    : 'com.squareup.retrofit2:converter-gson:2.9.0',
-                hilt                     : 'com.google.dagger:hilt-android:2.38.1'
+                hilt                     : 'com.google.dagger:hilt-android:2.38.1',
+                activityKtx              : 'androidx.activity:activity-ktx:1.3.1'
         ]
 
         testLibs = [
