se agrega logica para DI en detail movie

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.jeferson.chiper.android.moviedb">
-
     <!-- Permissions -->
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -14,6 +13,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MovieDB"
         android:usesCleartextTraffic="true">
+        <activity
+            android:name=".ui.detail_movie.DetailMovieActivity"
+            android:exported="false" />
         <activity
             android:name=".ui.main.MainActivity"
             android:exported="true">
